Fix Mockito error in tests